# alpaca-market-data

./: .env.example  .gitignore  OPTIONS_CHAIN.md  README.md  add_main_functions.py  comprehensive_test.py  final_check.py  github_setup_verification.py  options_pr_body.md  pr_body.md  pyproject.toml  quick_start.py  requirements-dev.txt  requirements.txt  setup.py  setup_complete.py  tasks_24_25_pr_body.md  test_cli_entrypoints.py  test_connection.py  test_options_chain.py  test_real_connection.py  verify_setup.py
docs/: ARCHITECTURE.md  BRD.md  PRD.md  TASKS.md
examples/: README.md
examples/cli/: advanced_cli_usage.sh  basic_cli_usage.sh
examples/notebooks/: market_analysis.ipynb
examples/python/: advanced_usage.py  basic_usage.py  options_examples.py
scripts/: __init__.py  crypto_cli.py  get_bars.py  get_news.py  get_option_quotes.py  get_option_snapshot.py  get_option_trades.py  get_quotes.py  get_snapshot.py  get_trades.py
src/alpaca_data/: __init__.py  client.py  exceptions.py  formatters.py  models.py  rate_limiter.py
src/alpaca_data/cli/: __init__.py  bars.py  crypto.py  crypto_cli.py  get_bars.py  get_news.py  get_quotes.py  get_snapshot.py  get_trades.py  news.py  option_chain.py  option_quotes.py  option_snapshot.py  option_trades.py  quotes.py  snapshot.py  trades.py
src/alpaca_market_data/: __init__.py
tests/: __init__.py  conftest.py  test_client.py  test_get_bars.py  test_get_crypto_bars.py  test_get_crypto_quotes.py  test_get_crypto_snapshot.py  test_get_crypto_trades.py  test_get_news.py  test_get_quotes.py  test_get_snapshot.py  test_get_trades.py  test_integration.py  test_models.py  test_options_api.py  test_options_cli.py  test_options_models.py  test_rate_limiter.py  test_task_14.py  test_task_15.py  test_task_16.py  test_task_16_integration.py  test_task_17.py
venv-setup/: pyvenv.cfg
venv-test/: pyvenv.cfg
